# RedNote-Skill

./: .gitignore  Makefile  PROGRESS.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: settings.yaml
docs/: xhs-api-reference.md  踩坑指南.md
docs/superpowers/plans/: 2026-07-13-rednote-cli-plan.md
docs/superpowers/specs/: 2026-07-09-rednote-skill-design.md  2026-07-13-rednote-cli-design.md
rednote/: __init__.py  __main__.py
rednote/commands/: config_cmd.py  login_cmd.py  report_cmd.py  scrape.py
rednote_core/: __init__.py
rednote_core/apis/: __init__.py  comments.py  homefeed.py  models.py  note.py  search.py  user.py
rednote_core/auth/: __init__.py  login.py  persistence.py
rednote_core/client/: __init__.py  curl_helper.py  exceptions.py  middleware.py  session.py
rednote_core/config/: __init__.py  loader.py
rednote_core/crypto/: __init__.py  config.py  fingerprint.py
rednote_core/crypto/cookie/: __init__.py  a1_webid.py  acw_tc.py  gid.py  websectiga.py
rednote_core/crypto/header/: __init__.py  fflate.py  fixed_cipher_tables.json  x_b3.py  x_rap_param.py  x_s.py  x_s_common.py  x_xray.py
rednote_core/crypto/primitives/: __init__.py  asymmetric.py  encoding.py  hash.py  symmetric.py
rednote_core/report/: __init__.py  renderer.py
rednote_core/report/templates/: base.html  daily.html  search.html
tests/: test_apis.py  test_asymmetric.py  test_cookies.py  test_encoding.py  test_hash.py  test_headers.py  test_integration.py  test_middleware.py  test_symmetric.py
