[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rednote"
version = "0.1.0"
description = "Xiaohongshu (RedNote) data collection CLI"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "httpx[http2]>=0.27",
    "pycryptodomex>=3.20",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "qrcode>=7.4",
    "rich>=13.0",
]

[project.scripts]
rednote = "rednote.__main__:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
