[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rednote"
version = "0.1.0"
description = "Xiaohongshu (RedNote) data collection CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "pycryptodomex>=3.20",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "qrcode>=7.4",
    "rich>=13.0",
]

[project.scripts]
rednote = "rednote.__main__:app"

[project.urls]
Homepage = "https://github.com/WJJ1577/RedNote-Skill"
Repository = "https://github.com/WJJ1577/RedNote-Skill"

[tool.hatch.build.targets.wheel]
packages = ["rednote", "rednote_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
